# cyrill

./: README.md  main.py  pyproject.toml
examples/: augmentation.ipynb
models/: trocr_cyrillic.ipynb  trocr_small.ipynb
src/preprocessing/: __init__.py  augmentation_pipeline.py  configs.py
src/preprocessing/loaders/: __init__.py  image_loader.py
src/preprocessing/transforms/: __init__.py  bad_photo_copy.py  base.py  dilation.py  elastic_transform.py  erosion.py  griddistortion.py  motion_blur.py  scale.py  scribbles.py  shear.py  watermark.py
